@@ -105,6 +105,7 @@
  * 08-Jun-2007 : Fixed bug in entity creation (DG);
  * 20-Jun-2007 : Removed JCommon dependencies (DG);
  * 27-Jun-2007 : Updated constructor for method changes in XYItemRenderer (DG);
+ * 02-Jul-2007 : Removed override field (DG);
  *
  */
 
@@ -136,7 +137,6 @@ import org.jfree.chart.plot.PlotRenderingInfo;
 import org.jfree.chart.plot.XYPlot;
 import org.jfree.chart.urls.XYURLGenerator;
 import org.jfree.chart.util.BooleanList;
-import org.jfree.chart.util.ObjectUtilities;
 import org.jfree.chart.util.PublicCloneable;
 import org.jfree.chart.util.RectangleEdge;
 import org.jfree.chart.util.SerialUtilities;
@@ -193,9 +193,6 @@ public class StandardXYItemRenderer extends AbstractXYItemRenderer
     
     /** Threshold for deciding when to discontinue a line. */
     private double gapThreshold = 1.0;
-
-    /** A flag that controls whether or not shapes are filled for ALL series. */
-    private Boolean shapesFilled;
 
     /** 
      * A table of flags that control (per series) whether or not shapes are 
@@ -280,7 +277,6 @@ public class StandardXYItemRenderer extends AbstractXYItemRenderer
             this.plotDiscontinuous = true;
         }
 
-        this.shapesFilled = null;
         this.seriesShapesFilled = new BooleanList();
         this.baseShapesFilled = true;
         this.legendLine = new Line2D.Double(-7.0, 0.0, 7.0, 0.0);
@@ -331,12 +327,6 @@ public class StandardXYItemRenderer extends AbstractXYItemRenderer
      * @see #getSeriesShapesFilled(int)
      */
     public boolean getItemShapeFilled(int series, int item) {
-        // return the overall setting, if there is one...
-        if (this.shapesFilled != null) {
-            return this.shapesFilled.booleanValue();
-        }
-
-        // otherwise look up the paint table
         Boolean flag = this.seriesShapesFilled.getBoolean(series);
         if (flag != null) {
             return flag.booleanValue();
@@ -344,43 +334,6 @@ public class StandardXYItemRenderer extends AbstractXYItemRenderer
         else {
             return this.baseShapesFilled;
         }
-    }
-
-    /**
-     * Returns the override flag that controls whether or not shapes are filled
-     * for ALL series.
-     * 
-     * @return The flag (possibly <code>null</code>).
-     * 
-     * @since 1.0.5
-     */
-    public Boolean getShapesFilled() {
-        return this.shapesFilled;
-    }
-    
-    /**
-     * Sets the 'shapes filled' for ALL series.
-     *
-     * @param filled  the flag.
-     * 
-     * @see #setShapesFilled(Boolean)
-     */
-    public void setShapesFilled(boolean filled) {
-        setShapesFilled(Boolean.valueOf(filled));
-    }
-
-    /**
-     * Sets the override flag that controls whether or not shapes are filled
-     * for ALL series and sends a {@link RendererChangeEvent} to all registered
-     * listeners. 
-     *
-     * @param filled  the flag (<code>null</code> permitted).
-     * 
-     * @see #setShapesFilled(boolean)
-     */
-    public void setShapesFilled(Boolean filled) {
-        this.shapesFilled = filled;
-        fireChangeEvent();
     }
 
     /**
@@ -1002,9 +955,6 @@ public class StandardXYItemRenderer extends AbstractXYItemRenderer
             return false;
         }
         if (this.gapThreshold != that.gapThreshold) {
-            return false;
-        }
-        if (!ObjectUtilities.equal(this.shapesFilled, that.shapesFilled)) {
             return false;
         }
         if (!this.seriesShapesFilled.equals(that.seriesShapesFilled)) {
